[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "motus"
path = "src/main.rs"

[dependencies]
arboard = "3.2.0"
clap = "4.3.11"
colored = "2.0.4"
human-panic = "1.1.5"
motus = {path = "../motus"}
rand = "0.8.5"
serde = "1.0.171"
serde_json = "1.0.100"
term-table = "1.3.2"
zxcvbn = "2.2.2"

[dev-dependencies]
assert_cmd = "2.0.11"
assert_json = "0.1.0"